--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -24,6 +24,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: ${{ github.event_name != 'pull_request' }}
-          tags: shivppatel/httpenv:latest
+          tags: shivppatel/httpenv:01
           cache-from: type-gha
           cache-to: type=gha,mode=max
