--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker Build
+name: Main
 
 on:
   push:
@@ -11,6 +11,10 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -27,3 +31,4 @@ jobs:
           tags: shivppatel/httpenv:latest
           cache-from: type-gha
           cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
